# flowco

./: .gitignore  Dockerfile  Makefile  README.md  hatch_build.py  pyproject.toml  requirements.txt  static
.github/ecs/: flowco-task.json
.github/workflows/: deploy.yml  pypi.yml  sanity.yml
.streamlit/: config.toml
mxgraph_component/: MANIFEST.in  Makefile  setup.py
mxgraph_component/mxgraph_component/: __init__.py
mxgraph_component/mxgraph_component/frontend/: package.json
mxgraph_component/mxgraph_component/frontend/public/: index.html
mxgraph_component/mxgraph_component/frontend/src/: diagram.tsx  index.tsx
paper/geyser/: geyser.flowco  geyser.ipynb  logistic.flowco  mortgage.flowco
src/: flowco.py
src/cli/: __main__.py
src/flowbug/: bugzipper.py  flowbucket.py  flowllm.py  flowlog.py  flowstress.py
src/flowco/: __main__.py  flowco.py
src/flowco/.streamlit/: config.toml
src/flowco/assistant/: assistant.py  base.py  flowco_assistant.py  flowco_keys.py  models.py  openai.py  stream.py  trim.py
src/flowco/builder/: assertions.py  build.py  cache.py  check_run.py  check_syntax.py  fine_grained_passes.py  graph_completions.py  new_passes.py  pass_config.py  passes.py  sanity_checks_pass.py  synthesize.py  synthesize_kinds.py  type_ops.py  unit_tests.py
src/flowco/cli/: __main__.py
src/flowco/dataflow/: check_extended_types.py  checks.py  dfg.py  dfg_update.py  editor.py  extended_type.py  extended_type_tests.py  function_call.py  graph_completions.py  parameter.py  phase.py  preconditions.py  schema_markdown.py  tests.py  unittest_editor.py
src/flowco/llm/: assistant.py  models.py  test.py
src/flowco/page/: ama.py  ama_node.py  checks_node.py  error_messages.py  hypothesize.py  notebook.py  output.py  page.py  page_editor.py  report.py  tables.py  template.html
src/flowco/pythonshell/: sandbox.py  shell.py  shells.py
src/flowco/session/: session.py  session_file_system.py
src/flowco/static/: README.md
src/flowco/test/: test_semantic_diff.py
src/flowco/ui/: __main__.py  authenticate.py  completions.py  flow_diagram.py  help.md  mx_diagram.py  special.css  ui_api.py  ui_args.py  ui_builder.py  ui_dialogs.py  ui_help.py  ui_init.py  ui_main.py  ui_page.py  ui_session.py  ui_st_pages.py  ui_util.py  variable.py
src/flowco/util/: builder.yaml  colors.py  config.py  costs.py  errors.py  files.py  json.py  monitor.py  output.py  prompts.yaml  semantic_diff.py  stoppable.py  stopper.py  text.py  yes_no.py
src/flowthon/: __init__.py  __main__.py  flowthon.py  flowthon_graph.py  nbflowthon.py  nbsplit.py  test_parse.py
src/llm/: assistant.py  litellm-config.yaml  litellm_support.py  message_format.py  models.py  ntest.py  test.py
src/mxgraph_component/: README.md
src/mxgraph_component/e2e/: test_template.py
src/mxgraph_component/mxgraph_component/: __init__.py
src/mxgraph_component/prebuilt/: mxgraph_component-0.0.1-py3-none-any.whl
test/assertions/: assertion-test.flowco  welcome.flowco
test/bpc/: ARC_Rocks.xlsx  Rift Rocks 6090_Pinney Hollow felsite.xlsx  module_polisci.py
test/finch/: finch-completed.flowco  finch-small.flowco  finch.flowco
test/flowthon/: welcome.flowthon
test/jumps/: jumps-completed.flowco  jumps.flowco  logging.txt
test/module/: bootstrap.json  client.json
test/paper-example/: beaks.csv  finch-2-step2.flowco  finch-2.flowco  finch.flowco
test/simple/: simple-completed.flowco  simple.flowco
test/snow/: snow.json  snow_data.csv
test/tasks/finch/: task.txt
test/tasks/nivea/: task.txt
test/tasks/temps/: task.txt  temps.flowco
test/temps/: temps.csv
(+43 files in other folders)
