[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowco"
version = "0.1"
authors = [
  { name = "Stephen Freund", email = "sfreund@williams.edu" }
]
dependencies = [
  "openai>=1.30.5",
  "litellm[proxy]>=1.39.6",
  "graphviz>=0.20.3",
  "black>=24.0",
  "pytest>=6.2.5",
  "instructor==1.3.1",
  "nbformat>=5.1.3",
  "termcolor>=2.4.0",
  "nbclient>=0.10.0",
  "nbconvert>=7.16.4",
  "pillow>=10.3.0",
  "ipykernel>=6.29.4", 
  "pyyaml>=6.0",
  "types-PyYAML>=6.0",
  "jsonmerge>=1.9.2",
  "streamlit>=1.41.1",
  "deepdiff>=7.0.1",
  "streamlit_extras>=0.4.7",
  "graphviz",
  "s3fs",
  "requests",
  "fsspec",
  "google-auth-oauthlib",
  "markdown",
  "nbformat",
  "pydantic",
  "streamlit_code_editor",

  # for the generated code...
  "pandas",
  "seaborn",
  "matplotlib",
  "numpy",
  "scipy",
  "scikit-learn"
]

description = "Yep."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[project.scripts]
flowco = "flowco.__main__:main"
flowco-ui = "flowco.ui.__main__:main"
flowco-ui-dev = "flowco.ui.__main__:dev"
flowco-service = "flowco.flowco:main"

flowthon = "flowthon.__main__:main"


[project.urls]
Homepage = "https://github.com/stephenfreund/flowco"

[project.optional-dependencies]
devel = [
    "wheel",
    "pytest==7.4.0",
    "playwright==1.39.0",
    "requests==2.31.0",
    "pytest-playwright-snapshot==1.0",
    "pytest-rerunfailures==12.0",
]
