[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "flowco"
version = "0.53.0"
authors = [
  { name = "Stephen Freund", email = "sfreund@williams.edu" }
]
dependencies = [
  "openai>=1.72.0",
  "litellm[proxy]>=1.39.6",
  "graphviz>=0.20.3",
  "black>=24.0",
  "pytest>=6.2.5",
  "instructor==1.3.1",
  "nbformat>=5.1.3",
  "termcolor>=2.5.0",
  "nbclient>=0.10.0",
  "nbconvert>=7.16.4",
  "pillow>=10.3.0",
  "ipykernel>=6.29.4", 
  "pyyaml>=6.0",
  "types-PyYAML>=6.0",
  "jsonmerge>=1.9.2",
  "streamlit==1.41.1",
  "deepdiff>=7.0.1",
  "streamlit_extras>=0.4.7",
  "graphviz",
  "s3fs",
  "requests",
  "fsspec",
  "google-auth-oauthlib",
  "markdown",
  "nbformat",
  "pydantic",
  "streamlit_code_editor",

  # for the generated code...
  "pandas",
  "seaborn",
  "matplotlib",
  "numpy",
  "scipy",
  "scikit-learn",
  "statsmodels"

]

description = "Yep."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[project.scripts]
flowco = "flowco.__main__:main"

flowco-cli = "cli.__main__:main"
flowthon = "flowthon.__main__:main"


[project.urls]
Homepage = "https://github.com/stephenfreund/flowco"

[project.optional-dependencies]
devel = [
    "wheel",
    "build",
    "pytest==7.4.0",
    "playwright==1.39.0",
    "requests==2.31.0",
    "pytest-playwright-snapshot==1.0",
    "pytest-rerunfailures==12.0",
]

[tool.hatch.build.hooks.custom]
hooks = ["hatch_build.Hook"]

[tool.hatch.build.targets.wheel.force-include]
"src/flowco/mxgraph_component/mxgraph_component/frontend/build" = "flowco/mxgraph_component/mxgraph_component/frontend/build"


[tool.hatch.build.targets.sdist.force-include]
"src/flowco/mxgraph_component/mxgraph_component/frontend/build" = "flowco/mxgraph_component/mxgraph_component/frontend/build"


